test/fixtures/typecheck/fail/UnknownVariable.kite
module UnknownVariable

foo : Int -> Int { match { x -> y } }
